# dyplom_beta

./: CMakeLists.txt  indexation.cpp
indexationLib/: CMakeLists.txt  Const_Handler.cpp  Const_Handler.h  Data.h  Dimentions.cpp  Dimentions.h  Handler.h  Handler_Base.cpp  Handler_Base.h  Memory.h  Traits.cpp  Traits.h
testsLib/: CMakeLists.txt  test1.cpp
